[gd_scene load_steps=2 format=3 uid="uid://hub_night_module"]

[ext_resource type="Script" path="res://Modules/HUB/Scripts/hub_night.gd" id="1_hub"]

[node name="HubNight" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hub")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.1, 0.18, 1)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="LabelTitle" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "밤 거점 (HUB_NIGHT)"
horizontal_alignment = 1

[node name="UnitList" type="ItemList" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
max_columns = 7
same_column_width = true

[node name="LabelSelected" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "선택: 없음"

[node name="Actions" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BtnInteract" type="Button" parent="Margin/VBox/Actions"]
layout_mode = 2
text = "교류"

[node name="BtnRest" type="Button" parent="Margin/VBox/Actions"]
layout_mode = 2
text = "휴식"

[node name="BtnEndDay" type="Button" parent="Margin/VBox/Actions"]
layout_mode = 2
text = "하루 종료"

[node name="BtnDungeon" type="Button" parent="Margin/VBox/Actions"]
layout_mode = 2
text = "던전 출발"

[node name="DialogDummy" type="AcceptDialog" parent="."]
title = "교류"
dialog_text = ""
ok_button_text = "확인"
